--- a/page5/index.html
+++ b/page5/index.html
@@ -495,7 +495,7 @@
           </tr>
         </tbody>
       </table>
-      <table
+      <!-- <table
         id="espacio1"
         class="es-content"
         cellspacing="0"
@@ -560,6 +560,141 @@
                     </td>
                   </tr>
                 </tbody>
+              </table>
+            </td>
+          </tr>
+        </tbody>
+      </table> -->
+      <table
+        id="espacio2"
+        class="es-content"
+        cellspacing="0"
+        cellpadding="0"
+        align="center"
+        style="background-color: #f5f5f5"
+      >
+        <tbody>
+          <tr>
+            <td class="esd-stripe" align="center">
+              <table
+                class="es-content-body"
+                cellspacing="0"
+                cellpadding="0"
+                bgcolor="#f5f5f5"
+                align="center"
+              >
+                <div class="container">
+                  <div class="row">
+                    <a class="title-curse title-frecuencias">
+                      <!-- <img class="img-title" src="images/title.png" alt="title" /> -->
+                      <spam>FRECUENCIAS</spam>
+                    </a>
+                  </div>
+                </div>
+                <br />
+                <a
+                  href="#"
+                  id="container-img"
+                  style="pointer-events: none"
+                  onclick="return false;"
+                >
+                  <!-- nuevo -->
+                  <!-- <img
+                    id="informacion"
+                    class="adapt-img info2"
+                    src="images/informacion-3.png"
+                    width="800"
+                  /> -->
+                  <div id="frecuencias" class="container">
+                    <div class="row titulo">
+                      <div class="col-3"></div>
+                      <div class="col-6"><span> HORARIO </span></div>
+                      <div class="col-3"><span> DURACIÓN </span></div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam> Regular</spam>
+                      </div>
+                      <div class="col-6 bg-pri">
+                        <spam> sábados</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam><spam>| </spam>4 horas por día</spam>
+                      </div>
+                      <div class="col-3 bg-pri duracion">
+                        <spam>1.5 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad"><spam>Intensivo</spam></div>
+                      <div class="col-6 bg-sec">
+                        <spam>lunes y miércoles</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam> <spam>| </spam>3 horas por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>1 mes</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad"><spam>Intensivo</spam></div>
+                      <div class="col-6 bg-sec">
+                        <spam>martes y jueves</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam> <spam>| </spam>3 horas por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>1 mes</spam>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam>Superintensivo</spam>
+                      </div>
+                      <div class="col-6 bg-sec">
+                        <spam> lunes a jueves</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam><spam>|</spam> 1h 30 min por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>1 mes</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam>Juvenil</spam>
+                      </div>
+                      <div class="col-6 bg-sec">
+                        <spam> martes y jueves</spam>
+                        <!--  <spam>|</spam> -->
+                        <spam> <spam>|</spam> 2 horas por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>1.5 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam>Juvenil</spam>
+                      </div>
+                      <div class="col-6 bg-sec">
+                        <spam>sábados</spam>
+                        <!--  <spam>|</spam> -->
+                        <spam> <spam>|</spam> 3 horas por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>2 meses</spam>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <span class="cronologia-pie">
+                        *1 hora cronológica = 60 minutos
+                      </span>
+                    </div>
+                  </div>
+                </a>
+
+                <br />
               </table>
             </td>
           </tr>
