--- a/page6/index.html
+++ b/page6/index.html
@@ -606,7 +606,7 @@
                     </a>
                   </div>
                 </div>
-                <br />
+
                 <a
                   href="#"
                   id="container-img"
@@ -628,12 +628,16 @@
                     </div>
                     <div class="row">
                       <div class="col-3 modalidad">
-                        <spam> Regular (enero a diciembre)</spam>
+                        <span> Regular </span
+                        ><span id="span">(enero a diciembre)</span>
                       </div>
                       <div class="col-6 bg-pri">
                         <spam> sábados</spam>
                         <!-- <spam>|</spam> -->
-                        <spam><spam>| </spam>3 horas por día de inmersión</spam>
+                        <spam
+                          ><spam>| </spam>3 horas por día
+                          <span id="horario-hidden">de inmersión</span></spam
+                        >
                       </div>
                       <div class="col-3 bg-pri duracion">
                         <spam>15 sesiones</spam>
@@ -641,7 +645,8 @@
                     </div>
                     <div class="row">
                       <div class="col-3 modalidad">
-                        <spam>Intensivo (marzo a diciembre)</spam>
+                        <span>Intensivo </span>
+                        <span id="span">(marzo a diciembre)</span>
                       </div>
                       <div class="col-6 bg-sec">
                         <spam>martes y jueves</spam>
